--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         .container {
-            max-width: 900px;
+            max-width: 950px;
             width: 100%;
             background: white;
             padding: 30px;
@@ -68,7 +68,7 @@
             font-size: 0.9rem;
         }
 
-        button {
+        button.log-btn {
             grid-column: 1 / -1;
             padding: 12px;
             background-color: var(--workshop-accent);
@@ -80,11 +80,10 @@
             transition: background 0.3s;
         }
 
-        button:hover {
+        button.log-btn:hover {
             background-color: #4e342e;
         }
 
-        /* Search Section Styling */
         .search-container {
             margin-top: 30px;
             border-top: 1px solid var(--border-color);
@@ -107,6 +106,16 @@
         .inventory-table th {
             background-color: #efebe9;
             color: var(--workshop-accent);
+        }
+
+        .delete-btn {
+            background-color: #e74c3c;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 0.75rem;
         }
     </style>
 </head>
@@ -159,36 +168,27 @@
             <label>Date Added</label>
             <input type="date" id="dateAdded">
         </div>
-        <button onclick="logItem()">Log to Workshop Registry</button>
+        <button class="log-btn" onclick="logItem()">Log to Workshop Registry</button>
     </div>
 
     <div class="search-container">
         <div class="input-group">
             <label>Search Inventory</label>
-            <input type="text" id="searchInput" onkeyup="filterTable()" placeholder="Filter by name, category, or status...">
+            <input type="text" id="searchInput" onkeyup="filterTable()" placeholder="Filter items...">
         </div>
 
         <table class="inventory-table">
             <thead>
-                <th>Status</th>
-<th>Date</th>
-<th>Actions</th> ```
-
-**2. Update the `logItem()` Function**
-Replace the part of your code that creates the `row` with this updated version:
-```javascript
-// Add to local UI table with a delete button
-const row = `<tr>
-    <td>${item.id}</td>
-    <td>${item.name}</td>
-    <td>${item.category}</td>
-    <td>${item.coord}</td>
-    <td>${item.qty}</td>
-    <td>${item.status}</td>
-    <td>${item.date}</td>
-    <td><button onclick="deleteRow(this)" style="background: #e74c3c; padding: 5px 10px; width: auto;">Delete</button></td>
-</tr>`;
-table.innerHTML += row;
+                <tr>
+                    <th>ID</th>
+                    <th>Item</th>
+                    <th>Category</th>
+                    <th>Coord</th>
+                    <th>Qty</th>
+                    <th>Status</th>
+                    <th>Date</th>
+                    <th>Actions</th>
+                </tr>
             </thead>
             <tbody id="inventoryBody">
                 </tbody>
@@ -226,6 +226,7 @@ table.innerHTML += row;
             <td>${item.qty}</td>
             <td>${item.status}</td>
             <td>${item.date}</td>
+            <td><button class="delete-btn" onclick="deleteRow(this)">Delete</button></td>
         </tr>`;
         table.innerHTML += row;
 
@@ -237,32 +238,27 @@ table.innerHTML += row;
             method: 'POST',
             body: JSON.stringify(item)
         })
-        .then(() => alert("Item logged successfully to Google Sheets!"))
+        .then(() => alert("Item logged successfully!"))
         .catch(error => console.error('Error:', error));
     }
 
-    // Search Logic
     function filterTable() {
         const input = document.getElementById("searchInput");
         const filter = input.value.toUpperCase();
-        const tableBody = document.getElementById("inventoryBody");
-        const rows = tableBody.getElementsByTagName("tr");
+        const rows = document.getElementById("inventoryBody").getElementsByTagName("tr");
 
         for (let i = 0; i < rows.length; i++) {
-            const textContent = rows[i].textContent || rows[i].innerText;
-            if (textContent.toUpperCase().indexOf(filter) > -1) {
-                rows[i].style.display = "";
-            } else {
-                rows[i].style.display = "none";
-            }
+            const text = rows[i].textContent || rows[i].innerText;
+            rows[i].style.display = text.toUpperCase().indexOf(filter) > -1 ? "" : "none";
         }
     }
+
     function deleteRow(btn) {
-    if(confirm("Are you sure you want to remove this item from the list?")) {
-        var row = btn.parentNode.parentNode;
-        row.parentNode.removeChild(row);
+        if(confirm("Are you sure you want to remove this item from the list?")) {
+            const row = btn.parentNode.parentNode;
+            row.parentNode.removeChild(row);
+        }
     }
-}
 </script>
 
 </body>
