--- a/index.html
+++ b/index.html
@@ -126,10 +126,6 @@
     
     <div class="input-grid">
         <div class="input-group">
-            <label>ID</label>
-            <input type="text" id="itemID" placeholder="e.g. T-001">
-        </div>
-        <div class="input-group">
             <label>Item Name</label>
             <input type="text" id="itemName" placeholder="e.g. Ryoba Saw">
         </div>
@@ -148,118 +144,4 @@
                 <option value="Wall-A">Wall A (Cleats)</option>
                 <option value="Wall-B">Wall B</option>
                 <option value="Cabinet-1">Mobile Cabinet</option>
-                <option value="Workbench">Workbench Drawer</option>
-            </select>
-        </div>
-        <div class="input-group">
-            <label>Quantity</label>
-            <input type="number" id="quantity" value="1">
-        </div>
-        <div class="input-group">
-            <label>Status</label>
-            <select id="status">
-                <option value="Operational">Operational</option>
-                <option value="Maintenance">Needs Maintenance</option>
-                <option value="Sharpening">Needs Sharpening</option>
-                <option value="Lent Out">Lent Out</option>
-            </select>
-        </div>
-        <div class="input-group">
-            <label>Date Added</label>
-            <input type="date" id="dateAdded">
-        </div>
-        <button class="log-btn" onclick="logItem()">Log to Workshop Registry</button>
-    </div>
-
-    <div class="search-container">
-        <div class="input-group">
-            <label>Search Inventory</label>
-            <input type="text" id="searchInput" onkeyup="filterTable()" placeholder="Filter items...">
-        </div>
-
-        <table class="inventory-table">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Item</th>
-                    <th>Category</th>
-                    <th>Coord</th>
-                    <th>Qty</th>
-                    <th>Status</th>
-                    <th>Date</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody id="inventoryBody">
-                </tbody>
-        </table>
-    </div>
-</div>
-
-<script>
-    // Set default date to today
-    document.getElementById('dateAdded').valueAsDate = new Date();
-
-    function logItem() {
-        const item = {
-            id: document.getElementById('itemID').value,
-            name: document.getElementById('itemName').value,
-            category: document.getElementById('category').value,
-            coord: document.getElementById('coordinate').value,
-            qty: document.getElementById('quantity').value,
-            status: document.getElementById('status').value,
-            date: document.getElementById('dateAdded').value
-        };
-
-        if(!item.name) {
-            alert("Please enter an item name.");
-            return;
-        }
-
-        // 1. Add to local UI table
-        const table = document.getElementById('inventoryBody');
-        const row = `<tr>
-            <td>${item.id}</td>
-            <td>${item.name}</td>
-            <td>${item.category}</td>
-            <td>${item.coord}</td>
-            <td>${item.qty}</td>
-            <td>${item.status}</td>
-            <td>${item.date}</td>
-            <td><button class="delete-btn" onclick="deleteRow(this)">Delete</button></td>
-        </tr>`;
-        table.innerHTML += row;
-
-        // 2. Clear Name field for next entry
-        document.getElementById('itemName').value = '';
-        
-        // 3. Send data to Google Sheets
-        fetch('https://script.google.com/macros/s/AKfycbxRRK7Ryb4S6VgWulRJrC2SVF2vlXM6qL0O4GYjbgPO-8QhJNBcjxRE4_jX89pKNY6fuw/exec', {
-            method: 'POST',
-            body: JSON.stringify(item)
-        })
-        .then(() => alert("Item logged successfully!"))
-        .catch(error => console.error('Error:', error));
-    }
-
-    function filterTable() {
-        const input = document.getElementById("searchInput");
-        const filter = input.value.toUpperCase();
-        const rows = document.getElementById("inventoryBody").getElementsByTagName("tr");
-
-        for (let i = 0; i < rows.length; i++) {
-            const text = rows[i].textContent || rows[i].innerText;
-            rows[i].style.display = text.toUpperCase().indexOf(filter) > -1 ? "" : "none";
-        }
-    }
-
-    function deleteRow(btn) {
-        if(confirm("Are you sure you want to remove this item from the list?")) {
-            const row = btn.parentNode.parentNode;
-            row.parentNode.removeChild(row);
-        }
-    }
-</script>
-
-</body>
-</html>
+                <option value="Workbench">
