--- a/index.html
+++ b/index.html
@@ -12,146 +12,48 @@
             --border-color: #d7ccc8;
             --low-stock-warning: #fff9c4;
         }
-
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: var(--workshop-bg);
             color: var(--text-color);
-            margin: 0;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            margin: 0; padding: 20px;
+            display: flex; flex-direction: column; align-items: center;
         }
-
         .container {
-            max-width: 1100px;
-            width: 100%;
-            background: white;
-            padding: 30px;
-            border-radius: 8px;
+            max-width: 1100px; width: 100%;
+            background: white; padding: 30px; border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0,0,0,0.05);
             border-top: 5px solid var(--workshop-accent);
         }
-
-        h1 {
-            text-align: center;
-            color: var(--workshop-accent);
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            font-size: 1.5rem;
-            margin-bottom: 30px;
-        }
-
-        .input-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-            gap: 15px;
-            margin-bottom: 20px;
-        }
-
-        .input-group {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .checkbox-group {
-            flex-direction: row;
-            align-items: center;
-            gap: 10px;
-            padding-top: 25px;
-        }
-
-        label {
-            font-size: 0.8rem;
-            font-weight: bold;
-            margin-bottom: 5px;
-            color: #7f8c8d;
-        }
-
-        input, select {
-            padding: 10px;
-            border: 1px solid var(--border-color);
-            border-radius: 4px;
-            font-size: 0.9rem;
-        }
-
-        button.log-btn {
-            grid-column: 1 / -1;
-            padding: 12px;
-            background-color: var(--workshop-accent);
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background 0.3s;
-        }
-
-        button.log-btn:hover {
-            background-color: #4e342e;
-        }
-
-        .inventory-table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        .inventory-table th, .inventory-table td {
-            text-align: left;
-            padding: 12px;
-            border-bottom: 1px solid var(--border-color);
-            font-size: 0.85rem;
-        }
-
-        .inventory-table th {
-            background-color: #efebe9;
-            color: var(--workshop-accent);
-        }
-
+        h1 { text-align: center; color: var(--workshop-accent); text-transform: uppercase; letter-spacing: 2px; margin-bottom: 30px; }
+        .input-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin-bottom: 20px; }
+        .input-group { display: flex; flex-direction: column; }
+        label { font-size: 0.8rem; font-weight: bold; margin-bottom: 5px; color: #7f8c8d; }
+        input, select { padding: 10px; border: 1px solid var(--border-color); border-radius: 4px; }
+        button.log-btn { grid-column: 1 / -1; padding: 12px; background: var(--workshop-accent); color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; }
+        .inventory-table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+        .inventory-table th, .inventory-table td { text-align: left; padding: 12px; border-bottom: 1px solid var(--border-color); font-size: 0.85rem; }
+        .inventory-table th { background-color: #efebe9; color: var(--workshop-accent); }
         .low-stock { background-color: var(--low-stock-warning) !important; }
-
-        .delete-btn {
-            background-color: #e74c3c;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 0.75rem;
-        }
+        .delete-btn { background: #e74c3c; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer; }
     </style>
 </head>
 <body>
 
 <div class="container">
     <h1>Workshop Inventory Log</h1>
-    
     <div class="input-grid">
-        <div class="input-group">
-            <label>Item Name</label>
-            <input type="text" id="itemName" placeholder="e.g. Ryoba Saw">
-        </div>
-
-        <div class="input-group">
-            <label>Category</label>
+        <div class="input-group"><label>Item Name</label><input type="text" id="itemName" placeholder="e.g. Bosch GTS 10 XC"></div>
+        <div class="input-group"><label>Category</label>
             <select id="category">
                 <option value="Hand Tools (Saws)">Hand Tools (Saws)</option>
-                <option value="Hand Tools (Edge)">Hand Tools (Edge)</option>
                 <option value="Power Tools">Power Tools</option>
-                <option value="Measuring & Marking">Measuring & Marking</option>
-                <option value="Clamping">Clamping</option>
                 <option value="Hardware">Hardware</option>
-                <option value="Consumables">Consumables</option>
                 <option value="Electrical">Electrical Components</option>
-                <option value="Lumber">Lumber</option>
-                <option value="Finishing">Finishing</option>
+                <option value="Consumables">Consumables</option>
             </select>
         </div>
-
-        <div class="input-group">
-            <label>Storage Zone</label>
+        <div class="input-group"><label>Storage Zone</label>
             <select id="zoneSelector" onchange="updateCoordinateOptions()">
                 <option value="Shelf">Shelves</option>
                 <option value="Drawer">Drawers</option>
@@ -159,73 +61,28 @@
                 <option value="Closet">Closets</option>
             </select>
         </div>
-
         <div class="input-group" id="coordDetailGroup">
             <label id="detailLabel">Shelf Row & Col</label>
             <div id="shelfInputs" style="display: flex; gap: 5px;">
-                <select id="rowSelect">
-                    <option value="0">0</option><option value="1">1</option>
-                    <option value="1bis">1bis</option><option value="2">2</option>
-                    <option value="2bis">2bis</option><option value="3">3</option>
-                    <option value="3bis">3bis</option>
-                </select>
-                <select id="colSelect">
-                    <option value="A">A</option><option value="B">B</option>
-                    <option value="C">C</option><option value="D">D</option>
-                </select>
+                <select id="rowSelect"><option>0</option><option>1</option><option>1bis</option><option>2</option><option>2bis</option><option>3</option><option>3bis</option></select>
+                <select id="colSelect"><option>A</option><option>B</option><option>C</option><option>D</option></select>
             </div>
-            <select id="drawerSelect" style="display: none;">
-                <option value="1">Drawer 1</option><option value="2">Drawer 2</option>
-                <option value="3">Drawer 3</option><option value="4">Drawer 4</option>
-                <option value="5">Drawer 5</option><option value="6">Drawer 6</option>
-                <option value="7">Drawer 7</option><option value="8">Drawer 8</option>
-            </select>
-            <input type="text" id="manualCoord" style="display: none;" placeholder="e.g. Closet-1">
+            <select id="drawerSelect" style="display: none;"><option value="1">Drawer 1</option><option value="2">Drawer 2</option><option value="8">Drawer 8</option></select>
+            <input type="text" id="manualCoord" style="display: none;" value="MW-Shelf">
         </div>
-
-        <div class="input-group">
-            <label>Quantity</label>
-            <input type="number" id="quantity" value="1">
+        <div class="input-group"><label>Quantity</label><input type="number" id="quantity" value="1"></div>
+        <div class="input-group"><label>Unit</label>
+            <select id="unit"><option>Pcs</option><option>Box</option><option>Liter</option></select>
         </div>
-
-        <div class="input-group">
-            <label>Unit</label>
-            <select id="unit">
-                <option value="Pcs">Pieces</option>
-                <option value="Box">Box</option>
-                <option value="Liter">Liters</option>
-                <option value="Set">Set</option>
-                <option value="Meter">Meters</option>
-            </select>
+        <div class="input-group" style="flex-direction:row; align-items:center; gap:10px; padding-top:25px;">
+            <input type="checkbox" id="isConsumable"><label style="margin:0;">Consumable?</label>
         </div>
-
-        <div class="input-group checkbox-group">
-            <input type="checkbox" id="isConsumable">
-            <label for="isConsumable">Consumable?</label>
-        </div>
-
-        <div class="input-group">
-            <label>Status</label>
-            <select id="status">
-                <option value="Operational">Operational</option>
-                <option value="Needs Sharpening">Needs Sharpening</option>
-                <option value="Needs Maintenance">Needs Maintenance</option>
-                <option value="In Stock">In Stock</option>
-                <option value="Low Stock">Low Stock</option>
-            </select>
-        </div>
-
         <button class="log-btn" onclick="logItem()">Log to Workshop Registry</button>
     </div>
-
     <div class="search-container">
-        <input type="text" id="searchInput" onkeyup="filterTable()" placeholder="Search inventory..." style="width: 100%; margin-bottom: 10px;">
+        <input type="text" id="searchInput" onkeyup="filterTable()" placeholder="Search inventory..." style="width:100%; padding:10px; margin-bottom:10px;">
         <table class="inventory-table">
-            <thead>
-                <tr>
-                    <th>ID</th><th>Item</th><th>Category</th><th>Location</th><th>Qty/Unit</th><th>Date</th><th>Actions</th>
-                </tr>
-            </thead>
+            <thead><tr><th>ID</th><th>Item</th><th>Category</th><th>Coord</th><th>Qty/Unit</th><th>Date</th><th>Status</th><th>Actions</th></tr></thead>
             <tbody id="inventoryBody"></tbody>
         </table>
     </div>
@@ -233,30 +90,18 @@
 
 <script>
     const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxRRK7Ryb4S6VgWulRJrC2SVF2vlXM6qL0O4GYjbgPO-8QhJNBcjxRE4_jX89pKNY6fuw/exec';
-
+    
     function updateCoordinateOptions() {
         const zone = document.getElementById('zoneSelector').value;
-        const shelfInputs = document.getElementById('shelfInputs');
-        const drawerSelect = document.getElementById('drawerSelect');
-        const manualCoord = document.getElementById('manualCoord');
-        const label = document.getElementById('detailLabel');
-
-        shelfInputs.style.display = (zone === 'Shelf') ? 'flex' : 'none';
-        drawerSelect.style.display = (zone === 'Drawer') ? 'block' : 'none';
-        manualCoord.style.display = (zone === 'Workbench' || zone === 'Closet') ? 'block' : 'none';
-
-        if(zone === 'Shelf') label.innerText = "Shelf Row & Col";
-        else if(zone === 'Drawer') label.innerText = "Select Drawer";
-        else if(zone === 'Workbench') { label.innerText = "Location Info"; manualCoord.value = "MW-Shelf"; }
-        else label.innerText = "Closet Name";
+        document.getElementById('shelfInputs').style.display = (zone === 'Shelf') ? 'flex' : 'none';
+        document.getElementById('drawerSelect').style.display = (zone === 'Drawer') ? 'block' : 'none';
+        document.getElementById('manualCoord').style.display = (zone === 'Workbench' || zone === 'Closet') ? 'block' : 'none';
     }
 
     function logItem() {
         const zone = document.getElementById('zoneSelector').value;
-        let coordValue = "";
-        if(zone === 'Shelf') coordValue = "S" + document.getElementById('rowSelect').value + "-" + document.getElementById('colSelect').value;
-        else if(zone === 'Drawer') coordValue = "Drawer-" + document.getElementById('drawerSelect').value;
-        else coordValue = document.getElementById('manualCoord').value;
+        let coordValue = (zone === 'Shelf') ? "S" + document.getElementById('rowSelect').value + "-" + document.getElementById('colSelect').value :
+                         (zone === 'Drawer') ? "Drawer-" + document.getElementById('drawerSelect').value : document.getElementById('manualCoord').value;
 
         const item = {
             id: "T-" + Date.now().toString().slice(-6),
@@ -265,31 +110,20 @@
             coord: coordValue,
             qty: document.getElementById('quantity').value,
             unit: document.getElementById('unit').value,
-            isConsumable: document.getElementById('isConsumable').checked,
-            status: document.getElementById('status').value,
-            date: new Date().toLocaleDateString()
+            date: new Date().toLocaleDateString(),
+            status: "Operational",
+            isConsumable: document.getElementById('isConsumable').checked
         };
 
-        if(!item.name) return alert("Please enter an item name.");
-
         fetch(SCRIPT_URL, { method: 'POST', body: JSON.stringify(item) })
-        .then(() => { alert("Logged: " + item.id); location.reload(); });
+        .then(() => { alert("Logged successfully!"); location.reload(); });
     }
 
     window.onload = function() {
         fetch(SCRIPT_URL).then(r => r.json()).then(data => {
             const table = document.getElementById('inventoryBody');
             data.forEach(item => {
-                const row = `<tr>
-                    <td>${item.id}</td>
-                    <td>${item.name}</td>
-                    <td>${item.category}</td>
-                    <td>${item.coord}</td>
-                    <td>${item.qty} ${item.unit || ''}</td>
-                    <td>${item.date}</td>
-                    <td><button class="delete-btn">Delete</button></td>
-                </tr>`;
-                table.innerHTML += row;
+                table.innerHTML += `<tr><td>${item.id}</td><td>${item.name}</td><td>${item.category}</td><td>${item.coord}</td><td>${item.qty} ${item.unit}</td><td>${item.date}</td><td>${item.status}</td><td><button class="delete-btn">Delete</button></td></tr>`;
             });
         });
     };
